frontend/src/styles/Book.module.scss
.book {
  $book: &;
  width: 240px;
  height: 320px;
  background: #e0e1dc;
  transform-style: preserve-3d;
  perspective: 3000px;
  transition: all 1s;
  cursor: pointer;
  backface-visibility: visible;
  border-bottom-right-radius: 0.5em;
  border-top-right-radius: 0.5em;
  user-select: none;

  &:global(.active) {
    position: absolute;
    left: 50%;
    top: 50%;
    transform-origin: center left;
    transform: translate3d(0, -50%, 0) scale(1.5);
    z-index: 20;
  }
  @for $i from 1 through 9 {
    .bookPage:nth-child(#{$i}) {
      z-index: 10 - $i;
      transform: rotateY(-20deg + $i * 3);
      &:hover {
        transform: rotateY(-25deg + $i * 3);
      }
      &:global(.flipped) {
        &:hover {
          transform: none;
        }
        transform: rotateY(-170deg + $i * 3);
        &:hover {
          transform: rotateY(-168deg + $i * 3);
        }
        .pageFront {
          opacity: 0;
          visibility: hidden;
        }
        .pageBack {
          opacity: 1;
          visibility: visible;
        }
      }
    }
  }
  .bookPage {
    transform-style: preserve-3d;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    transform-origin: left center;
    transition: transform 0.5s ease-in-out, box-shadow 0.35s;
    border-bottom-right-radius: 0.5em;
    border-top-right-radius: 0.5em;
    // overflow: hidden;
    &:not(:last-child):not(:nth-last-child(2)) {
      box-shadow: 2px 0 5px 0 rgba(0, 0, 0, 0.3);
    }
    background: #e0e1dc;
    .pageFront {
      width: 100%;
      height: 100%;
      padding: 10px;
      opacity: 1;
      visibility: visible;
      transition: 0.7s;
      box-shadow: inset 7px 0 20px -7px rgba(0, 0, 0, 0.4);
    }
    &:first-child {
      .pageFront {
        transition: transform 0.7s;
      }
    }
    .pageBack {
      position: absolute;
      width: 100%;
      height: 100%;
      top: 0;
      left: 0;
      padding: 10px;
      opacity: 0;
      visibility: hidden;
      transform: scaleX(-1);
      transition: opacity 0.6s;
      box-shadow: inset -7px 0 20px -7px rgba(0, 0, 0, 0.4);
    }
  }
  .bookCover {
    display: grid;
    place-items: center;
    background: #f9f6eb;
    > img {
      width: 100%;
      object-fit: cover;
    }
  }
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.5);
  display: none;
}
@keyframes heartbeat {
  from {
    transform: scale(1);
    transform-origin: center center;
    animation-timing-function: ease-out;
  }
  10% {
    transform: scale(0.91);
    animation-timing-function: ease-in;
  }
  17% {
    transform: scale(0.98);
    animation-timing-function: ease-out;
  }
  33% {
    transform: scale(0.87);
    animation-timing-function: ease-in;
  }
  45% {
    transform: scale(1);
    animation-timing-function: ease-out;
  }
}

